<resources>
    <string name="app_name">Eontrepreneur</string>
    <string name="action_settings">Settings</string>
    <string name="error_weak_password">weak_password</string>
    <string name="error_invalid_email">invalid email</string>
    <string name="error_user_exists">user exist</string>

    <string name="log_in">Log In</string>
    <string name="profile_title">My Profile</string>
    <string name="search_product_title">Search Products</string>
    <string name="pending_orders_title">Pending Orders</string>
    <string name="past_orders_title">Past Orders</string>
    <string name="settings_title">Settings</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="product_type_title">Product Type</string>
    <string name="vegetable_title">Vegetable</string>
    <string name="fruit_title">Fruit</string>
    <string name="commercial_rlabel">Commercial</string>
    <string name="upload_photo_title">Upload Photo</string>
    <string name="submit_name">Submit</string>
    <string name="change_password_name">Change Password</string>
    <string name="mode_name">Email</string>
    <string name="name_text">Name</string>
    <string name="quantity_title">Quantity</string>
    <string name="price_title">Price</string>
    <string name="harvest_date_title">Harvest Date</string>
    <string name="email_text">Email</string>
    <string name="password_title">Password</string>
    <string name="forgot_password_text">Forgot Password ?</string>
    <string name="dont_have_an_account_statement">Don\'t have an account?</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sort_button">Sort</string>
    <string name="filter_button">Filter</string>
    <string name="wiliam_snow_name">Wiliam Snow</string>
    <string name="photos_text">Photos</string>
    <string name="my_ratings_text">My Ratings</string>
    <string name="date_of_birth_text">Date of Birth</string>
    <string name="follow_me_button">Follow Me</string>

    <string name="change_language_title">हिंदी</string>
    <string name="sort_default_text">Default</string>
    <string name="sort_by_text">Sort By</string>
    <string name="sort_price_low_text">Price - Low to High</string>
    <string name="sort_price_high_text">Price - High to Low</string>
    <string name="sort_quantity_low_text">Quantity - Low to High</string>
    <string name="sort_quantity_high_text">Quantity - High to Low</string>
    <string name="product_quantity">Quantity: </string>
    <string name="product_price">Price: </string>
    <string name="product_harvest">Harvest Date: </string>
    <string name="product_rating">Rating: </string>
    <string name="product_dumpy">Product</string>
    <string name="choose_button">Choose</string>
    <string name="upload_button">Upload</string>
    <string name="search_hint">Search</string>
    <string name="farmer_radio_text">Farmer</string>
    <string name="buyer_radio_text">Buyer</string>
    <string name="fname_hint">First Name</string>
    <string name="lname_hint">Last Name</string>
    <string name="dob_hint">Date Of Birth</string>
    <string name="gender_radiobutton">Gender: </string>
    <string name="male_radiobutton">Male</string>
    <string name="female_radiobutton">Female</string>
    <string name="city_hint">City</string>
    <string name="email">Email</string>
    <string name="password_hint">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="account_exist_text">Already have an account</string>
    <string name="offer_text">Make an offer</string>
    <string name="offer_hint">How much is your offer</string>
    <string name="offer_button">Send Offer</string>
    <string name="reset_pass_confirm">Send Reset Link</string>
    <string name="farmer_upload_title">Upload Product</string>
    <string name="title_activity_create__group_">Create_Group_Activity</string>
    <string name="title_activity_group_activity">Group_activity</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
