<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context="Signing_Activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/rounded_card_36"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingTop="36dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="Evineon"
            android:gravity="center"
            android:textColor="@color/primary_text"
            android:textSize="36dip"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:background="@drawable/corner_radius_textview"
                android:id="@+id/input_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fname_hint"
                android:inputType="textPersonName"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lname_hint"
                android:background="@drawable/corner_radius_textview"
                android:inputType="textPersonName"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <Button
                android:id="@+id/input_dob"
                android:layout_width="match_parent"
                android:background="@drawable/corner_radius_textview"
                android:layout_height="wrap_content"
                android:hint="@string/dob_hint"
                android:inputType="textPersonName"
                android:padding="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="0dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_radiobutton"
                android:textColor="@color/secondary_text"
                android:textSize="18dip"
                android:paddingLeft="12dp"/>

            <RadioGroup
                android:id="@+id/radio_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:buttonTint="@color/primary_dark"
                    android:padding="8dp"
                    android:layout_marginLeft="18dp"
                    android:textSize="14dip"
                    android:text="@string/male_radiobutton"/>

                <RadioButton
                    android:id="@+id/radio_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:buttonTint="@color/primary_dark"
                    android:padding="8dp"
                    android:layout_marginLeft="18dp"
                    android:textSize="14dip"
                    android:text="@string/female_radiobutton"/>

            </RadioGroup>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_radius_textview"
                android:hint="@string/city_hint"
                android:inputType="textPostalAddress"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_phone"
                android:background="@drawable/corner_radius_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone number"
                android:inputType="number"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_org"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Organisation"
                android:background="@drawable/corner_radius_textview"
                android:inputType="textEmailAddress"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Classification"
                android:background="@drawable/corner_radius_textview"
                android:inputType="textEmailAddress"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:background="@drawable/corner_radius_textview"
                android:inputType="textEmailAddress"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_confirm"
            style="@style/Button.Primary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_rounded"
            android:backgroundTint="@color/primary_dark"
            android:text="Confirm" />
    </LinearLayout>
</ScrollView>
